# foreal

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  ReadMe.md  index.html  pyproject.toml  search.html
.github/workflows/: main.yml
api/: index.html
concept/: index.html
data_independence/: index.html
docs/: build.novella  mkdocs.yml  requirements.txt
docs/content/: api.md  concept.md  data_independence.md  examples.md  get_started.md  index.md  use_cases.md
examples/: ReadMe.md  index.html
examples/hello_world/: main.py  taskgraph.py
examples/permalytix/data/: matterhorn_annotations.jsonl  matterhorn_classes.jsonl
examples/permalytix/src/: train.py  webportal.py
examples/permalytix/src/pages/: dashboard.py
examples/permalytix/src/taskgraphs/: classification.py  simple.py
foreal/: __init__.py  config.py  convenience.py
foreal/apps/: annotations.py  models.py  seismic.py
foreal/apps/permasense/: __init__.py  gpp.py  gsn.py  images.py  seismic.py
foreal/core/: __init__.py  datasets.py  graph.py  persist.py  requests.py
foreal/processing/: __init__.py  downsampling.py  spectrogram.py
foreal/webportal/: __init__.py  app.py  controls.py  shared.py
foreal/webportal/pages/: dashboard.py  introduction.py  processing.py
foreal/webportal/plotting/: HoloViewPlot.py  __init__.py
foreal/webportal/utils/: __init__.py
get_started/: index.html
search/: search_index.json
tests/: README.md  test_annotations.py  test_core.py  test_images.py  test_package.py  test_persist.py  test_processing.py
use_cases/: index.html
